package com.example.classtinder;

import android.app.Activity;
import android.os.Bundle;

public class Year extends Activity {
    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.year);
    }
}
